	  Change the default IN request buffer size from 64 to 96.  This will
	  avoid requests of exactly MAXPACKET size and, hence, avoid so many
	  NULL packets.  Also, fix the OUT request buffers size to exactly
	  the max packet size.  It cannot be any other size (2013-5-29).
	* .gitignore:  Clean-up of most all .gitignore files:  Make scope of
	  ignore to be only the current directory; Ignore .dSYM files in
	  directories where .exe's may be build.  Also, in Makefiles,
	  clean .dSYM files in directories where .exe may be built (2013-5-30).
	* drivers/wireless/nrf24101.c/.h and include/nuttx/wireless/nrf24101.h:
	  Add new driver for the wireless nRF24L01+ transceiver.  From Laurent
	  Latil (2013-6-1).
	* drivers/wireless/cc1101:  Move files in the cc1101 up one directory.
	  From Laurent Latil (2013-6-1).
	* configs/stm32_tiny: Fix nRF24L01+ driver integration for the STM32
	  Tiny.  From Laurent Latil (2013-6-01).
	* configs/sam3u-ek:  All remaining configurations changed to use
	  the kconfig-frontends tools (2013-6-2).
	* arch/arm/src/sam3u/chip:  All SAM3U register definition files moved
	  to this subdirectory.  Naming of registers changed from SAM3U_ to
	  just SAM_.  This is in preparation for a SAM4L port (2013-6-2).
	* arch/arm/src/sam3u:  Renamed files to sam_* vs. sam3u_*.
	  Eliminated sam3u_internal.h; instead uses individual header
	  files for each SAM interface block (2013-6-2).
	* arch/arm/src/stm32/stm32f20xxx_rcc.c and stm32f40xxx_rcc.c, and
	  configs/mikroe-stm32f4/src/up_clockconfig.c.  Correct some bad
	  conditional compilation (CONFIG_ missing from setting name).  This
	  affects some STM32 FLASH pre-fetch settings.  From Lorenz Meier
	  (2013-6-2).
	* arch/arm/include/sam34 and arch/arm/src/sam34:  The old sam3u/
	  directories were renamed sam34/ to make room in the namespace for
	  the SAM4L (2013-6-2).
	* libc/stdio/lib_dprintd.c and lib_vdprintf.c:  Add dprintf() and
	  vdprintf() (the latter from Andrew Tridgell, 2013-6-2).